--- a/angular/index.html
+++ b/angular/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myAppp">
 	<meta charset="utf-8" />
 
 	<body>
 
-		<div ng-app="myAppp" ng-controller="personController" ng-init="quantity=1;cost=5;person={firstName:'John',lastName:'Doe'};points=[1,15,19,2,40]">
+		<div ng-controller="personController" ng-init="quantity=1;cost=5;person={firstName:'John',lastName:'Doe'};points=[1,15,19,2,40]">
 			<p>在输入框中尝试输入：</p>
 			<p>姓名：
 				<input type="text" ng-model="name">
@@ -30,15 +30,15 @@
 		</div>
 		<p>总价: {{ quantity * cost }}</p>
 
-		<div ng-app="">
+		<div>
 			<p>我的第一个表达式： {{ 5 + 5 }}</p>
 		</div>
 
-		<div ng-app="" ng-init="quantity=1;cost=5">
+		<div  ng-init="quantity=1;cost=5">
 			<p>总价: {{ quantity * cost }}</p>
 		</div>
 
-		<script src="//www.runoob.com/try/angularjs/1.2.5/angular.min.js"></script>
+		<script src="js/angular.min.js"></script>
 
 		<script>
 			/*function personController($scope) {
